# dev-game-courses-

01/hello/: CMakeLists.txt  readme.md
01/lib/: CMakeLists.txt
01/lib/hello_bin/: CMakeLists.txt  readme.md
01/lib/hello_lib/: CMakeLists.txt  readme.md
02/dynamic/: CMakeLists.txt  main.cxx
02/static/: CMakeLists.txt  main.cxx
03/3-eng-to-dll/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  loop
03/3-eng-to-dll/debug/.cmake/api/v1/reply/: cache-v2-e659a692788528451589.json  cmakeFiles-v1-b97b3b9621c221ab3b96.json  codemodel-v2-0782e8e963ce6cefce43.json  index-2021-02-03T09-18-13-0197.json  target-eng-Debug-f5f2d30e321ab7c3d094.json  target-loop-Debug-e74cc8fa5a46d299a4fa.json
03/3-eng-to-dll/src/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx
03/4-game-dll/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  eng
03/4-game-dll/debug/.cmake/api/v1/reply/: cache-v2-2ffed8aadf0b863cedda.json  cmakeFiles-v1-1b79d41af4660efc6431.json  codemodel-v2-ac1a59a59e5e64c70b36.json  index-2021-02-06T08-09-02-0048.json  target-eng-Debug-49e1cf11db64d181b1b3.json  target-game-Debug-06a5a072df1f62dd4bb3.json
03/4-game-dll/src/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx
03/loop-to-eng/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  loop
03/loop-to-eng/debug/.cmake/api/v1/reply/: cache-v2-9488f674cc6e5ffdf11a.json  cmakeFiles-v1-b0f9d49898191dc8443b.json  codemodel-v2-e187eb670adabb99defb.json  index-2021-02-03T09-11-44-0046.json  target-loop-Debug-131aacaa532c6e140b8f.json
03/loop-to-eng/src/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx
03/loop/build-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  loop  loop-eng
03/loop/build-Debug/.cmake/api/v1/reply/: cache-v2-8cfb3fd5872398ab3f74.json  cmakeFiles-v1-86db147a830d5dc62146.json  codemodel-v2-48e922741b6526c286ee.json  index-2021-02-02T14-07-22-0487.json  target-loop-Debug-a426cf514f2d8b127cc5.json
03/loop/build-Release/: CMakeCache.txt  Makefile  cmake_install.cmake  loop
03/loop/build-Release/.cmake/api/v1/reply/: cache-v2-8e31251738d366f81cc8.json  cmakeFiles-v1-4cdac99499f46687b512.json  codemodel-v2-90106a4bd5519a3643b7.json  index-2021-02-05T09-34-56-0751.json  target-eng-Release-683dc1539283c5533998.json  target-loop-Release-a629e9640f97abd5e13c.json
03/loop/src/: CMakeLists.txt  main.cxx
04-openGL/min/src/: CMakeLists.txt  engine.hxx  game.cxx
04-openGL/min/src/glad/: glad.c  glad.h
04-openGL/min_test/src/: CMakeLists.txt  engine.hxx  game.cxx  testss.txt
04.v2/src/: CMakeLists.txt  GFX.hxx  GFX_main.cxx
04/bbb/: 00_green_image.ppm  01_lines.ppm  02_triangle.ppm  03_triangles.ppm  04-0-render-basic  04-0-render-basic-line  04-0-render-basic-triangle  04-0-render-basic-triangle-indexed  04-0-render-basic-triangle-interpolated  04-0-render-basic-windowed  04-0-render-full-windowed  04-0-render-image-windowed  05_interpolated.ppm  06_textured_triangle.ppm  CMakeCache.txt  Makefile  cmake_install.cmake  leo.ppm
04/bbb/.cmake/api/v1/reply/: cache-v2-926d04eb233cab7c1302.json  cmakeFiles-v1-556179d5dd2ac39d1fcc.json  codemodel-v2-169e92d348ada3514ebb.json  index-2021-02-17T10-30-18-0260.json  target-04-0-render-basic-Debug-be93e992fe1f4d3d772c.json  target-04-0-render-basic-line-Debug-d0a76643aa3f4ca789ee.json  target-04-0-render-basic-triangle-Debug-459bf93e345c0476604f.json  target-04-0-render-basic-triangle-indexed-Debug-c21115ef0b553c99e7b7.json  target-04-0-render-basic-triangle-interpolated-Debug-8256d08d786c71caf1e4.json  target-04-0-render-basic-windowed-Debug-173fa436ee22ce186b32.json  target-04-0-render-full-windowed-Debug-44bcd8588ce4f2fd441d.json  target-04-0-render-image-windowed-Debug-7777df7aab2eb9ba1db0.json
04/src/: 01_render_line.hxx  01_render_line_main.cxx  02_triangle.hxx  02_triangle_main.cxx  03_triangle_index.hpp  03_triangle_index.hxx  03_triangle_index_main.cxx  04_triangle_mod.hxx  04_triangle_mod_main.cxx  05_GFX.cxx  05_GFX.hxx  05_GFX_main.cxx  0_canvas_base.cxx  0_canvas_base.hxx  0_canvas_base_main.cxx  CMakeLists.txt
05_heli-audio/src/: CMakeLists.txt  engine.hxx  game.cxx
05_heli/src/: CMakeLists.txt  engine.hxx  game.cxx
05_heli_imgui/src/: CMakeLists.txt  engine.hxx  game.cxx  myaudio.h
06_heli_game/build-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  game_heli
06_heli_game/build-Debug/.cmake/api/v1/reply/: cache-v2-5f21fbc5b54c971f1493.json  cmakeFiles-v1-3afe02e0a8e50a391b9d.json  codemodel-v2-818616e6229df804e444.json  index-2021-04-15T17-05-49-0873.json  target-game_heli-Debug-db364f6b5cf0910a4a45.json
06_heli_game/src/: CMakeLists.txt
